--- a/imperiya/styles/style.css
+++ b/imperiya/styles/style.css
@@ -301,13 +301,6 @@ body {
     
 }
 
-/*
-.service__img {
-    max-width: 100%;
-    height: auto;
-}
-*/
-
 .h3 {
     display: block;
     margin-left: 40%;
@@ -341,27 +334,10 @@ body {
     border: 2px solid #d2d9df;
 }
 
-/*.link__service {
-    display: block;
-}*/
 .block__service {
     text-align: center;
     width: 16.25%;
 }
-
-/*
-.block__service:nth-child(2n) {
-    padding-left: 10px;
-}
-
-.block__service:nth-child(3n) {
-    padding-left: 4px;
-}
-
-.block__service:nth-child(4n) {
-    padding-left: 0px;
-}
-*/
 
 .block__service:hover .service__rect {
     background: #d2d9df;
@@ -456,6 +432,7 @@ body {
     margin-bottom: 10px;
     background: #fef3b4;
     border: 0;
+    padding-left: 3%;
 }
 
 .about__form__btn {
@@ -487,7 +464,7 @@ body {
 
 .about__company__form input::-webkit-input-placeholder,
 .about__company__form textarea::-webkit-input-placeholder {
-  text-indent: 13px;
+  text-indent: 9px;
     color: black;
     font-size: 14px;
     font-weight: 400;
@@ -898,11 +875,12 @@ body {
     border: none;
     width: 83%;
     height: 30px;
+    padding-left: 3%;
 }
 
 .footer__contacts__block input::-webkit-input-placeholder {
     color: white;
-    text-indent: 13px;
+    text-indent: 10px;
 }
 
 .btn__footer {
@@ -944,13 +922,17 @@ body {
 }
 
 
-
-
-
-
-
-@media only screen and (min-width: 1900px) and (min-width: 2500px) {
+@media only screen and (min-width: 1500px)  {
     
+.slider__text__block {
+    margin-top: 20%;
+   
+}
+
+}
+
+
+@media only screen and (min-width: 1800px)  {
 .h2__rect {
     margin-top: 0.2%;
     left: 48%;
@@ -958,6 +940,25 @@ body {
     
 }
 }
+@media only screen and (min-width: 2300px)  {
+    .slider2__text__block {
+        width: 80%;
+        
+    }
+    
+}
+@media only screen and (min-width: 2500px)  {
+    
+.slider__text__block {
+    margin: 0;
+    margin-top: 20%;
+    margin-left: 10%;
+    width: 80%;
+   
+}
+
+}
+
 @media only screen and (max-width: 1200px) {
     .list__item {
     margin-right: 3%
@@ -998,6 +999,48 @@ body {
 }
 
 @media only screen and (max-width: 992px) {
+    .services .h2,
+    .services .h3,
+    .about__h .h2,
+    .about__h .h3,
+    .about__company .h2,
+    .about__company .h3,
+    .slider2 .h2,
+    .slider2 .h3,
+    .reviews .h2,
+    .reviews .h3,
+    .clients .h2,
+    .clients .h3,
+    .news .h2,
+    .news .h3,
+    .seo .h2,
+    .seo .h3 {
+        margin-left: 0;
+        text-align: center;
+    }
+    
+    .services,
+    .about__h,
+    .about__company,
+    .slider2,
+    .reviews,
+    .clients,
+    .news,
+    .seo {
+        margin-top: 30px;
+    }
+    
+    
+    .services .h3,
+    .about__h .h3,
+    .about__company .h3,
+    .slider2 .h3,
+    .reviews .h3,
+    .clients .h3,
+    .news .h3,
+    .seo .h3 {
+        margin-bottom: 30px;
+    }
     
 .slider__text__block {
     
@@ -1040,10 +1083,8 @@ body {
         margin-bottom: 10px;
     }
 .service__rect {
-        top: 40px;
+    top: 40px;
     left: 20%;
-    /*top: 120px;*/
-    /*left: 25%;*/
     margin:0;
     width: 40%;
     height: 40%;
@@ -1081,8 +1122,8 @@ body {
         text-align: center;
     }
     .block__client:first-child,
-.block__client:last-child {
-    text-align: center;
+    .block__client:last-child {
+        text-align: center;
     }
     
     .reviews__block:nth-child(2n),
@@ -1130,7 +1171,6 @@ body {
 @media only screen and (max-width: 767px) {
      .slider2 p {
         width: 97%;
-        
     }
     .slider__btn {
         height: 30px;
@@ -1158,50 +1198,48 @@ body {
         font-size: 16px;
     }
 
-.h2 {
-    font-size: 22px;
+    .h2 {
+        font-size: 22px;
     
-}
+    }
 
-.h3 {
-    font-size: 16px;
-}
+    .h3 {
+        font-size: 16px;
+    }
 
-.about__company__txt,
-#text_more,
-.seo__txt1 {
-    font-size: 16px;  
-}
-    
-#top-menu {
-    width: 100%;
-    position: absolute;
-    z-index: 5;
-    margin-top: 56px;
-    border-top: none; 
-}
-.menu__header ul {
-    
-      background:#e2e4e6;
-      opacity: 0.8;
-      padding-left: 0;
-      width: 50%;
-      float: right; 
-}
- .list__item {
-        margin-right: 0;
-      float: none;
-      border-bottom: 1px solid;
-
+    .about__company__txt,
+    #text_more,
+    .seo__txt1 {
+        font-size: 16px;  
     }
     
-.list__item__link {
-    display: block;
-    padding-top: 5px;*/
-    padding-bottom: 5px;
-      font-size: 14px;
-      text-align: center; 
+    #top-menu {
+        width: 100%;
+        position: absolute;
+        z-index: 5;
+        margin-top: 56px;
+        border-top: none; 
     }
+    .menu__header ul {
+       background:#e2e4e6;
+       opacity: 0.8;
+       padding-left: 0;
+       width: 50%;
+       float: right; 
+    }
+    .list__item {
+       margin-right: 0;
+       float: none;
+       border-bottom: 1px solid;
+    }
+    
+    .list__item__link {
+        display: block;
+        padding-top: 5px;*/
+        padding-bottom: 5px;
+        font-size: 14px;
+        text-align: center; 
+     }
     
 .list__item__link:hover {
     text-decoration: none;
@@ -1245,21 +1283,14 @@ body {
 } 
 
 @media only screen and (max-width: 750px) {
-    
-   
-
-    
     .logo__footer,
     .footer__service,
     .footer__menu,
     .footer__contacts {
         margin-bottom: 10px;
     }
-    
-    
-    
+
 }
-/*635*/
 
 @media only screen and (max-width: 650px) {
     .slider__text__block {
@@ -1284,26 +1315,25 @@ body {
         font-size: 16px;
     }
 
-.contacts__number1 {
-    font-size: 14px;
-}
-
-.contacts__number {
-    font-size: 16px;
+    .contacts__number1 {
+        font-size: 14px;
     }
-.soc__link {
-    font-size: 12px;
-}
+
+    .contacts__number {
+        font-size: 16px;
+    }
+    .soc__link {
+        font-size: 12px;
+    }
     
-.service__rect {
-    width: 55%;
-   
-}
+    .service__rect {
+        width: 55%;
+    }
     
-.clients__logo {
-    max-width: 50%;
-    height: auto;
-}
+    .clients__logo {
+        max-width: 50%;
+        height: auto;
+     }
 
 }
 @media only screen and (max-width: 600px) {
@@ -1369,64 +1399,33 @@ body {
     
 }
 
-
-@media only screen and (max-width: 465px) {
-/*
-    #id_contacts {
-        margin-left: 30%;
-        padding-top: 0;
-    }
-*/
-    
-    .social {
-/*        margin-left: 30%;*/
-    }
-    
-}
-
 @media only screen and (max-width: 460px) {
-.slider2 p {
-    width: 95%;
-    font-size: 16px;
-   line-height: 1.1;
-}
+    .slider2 p {
+        width: 95%;
+        font-size: 14px;
+       line-height: 1.1;
+    }
     .slider__btn {
-    width: 47%;
-    font-size: 14px;
-    height: 25px;
-}
-
+        width: 47%;
+        font-size: 14px;
+        height: 25px;
+    }
     .social {
         width: 30%;
         margin-left: 2%;
     }
+  
+    .service__rect {
+        width: 65%;
+   }
 
-    
-.service__rect {
-    width: 65%;
-/*    height: 55%;*/
-   
-}
-
-.service__text {
-    margin: 12% 0;
-    font-size: 12px;
-    padding-top: 0;
-}
-
-}
-
-
-/*
-@media only screen and (max-width: 460px) {
-
-.service__rect {
-    top: 30px;
-    width: 85%;
+    .service__text {
+        margin: 12% 0;
+        font-size: 12px;
+        padding-top: 0;
     }
-    
+
 }
-*/
 
 @media only screen and (max-width: 430px) {
     .slider__text__block {
@@ -1438,38 +1437,28 @@ body {
     #id_contacts {
         margin-left: 20%;
     }
-    
-/*
-    .social {
-        width: 50%;
-        margin-left: 20%;
-    }
-*/
-    
 }
 
 @media only screen and (max-width: 400px) {
     .service__rect {
-     left: 30%;
+         left: 30%;
+    }
 
-   
-}
-
-.service__text {
-    
-    padding-top: 4%;
-}
-    
+    .service__text {
+        padding-top: 4%;
+    }
 }
 
 @media only screen and (max-width: 370px) {
     .social {
-        width: 35%;
+        width: 38%;
+    }
+    #id_contacts {
+        margin-left: 5%;
     }
 }
 
 @media only screen and (max-width: 395px) {
-    
     .slider__text__block p {
         width: 90%;
     }
@@ -1478,28 +1467,20 @@ body {
 
 @media only screen and (max-width: 340px) {
     #id_contacts {
-        margin-left: 10%;
+        margin-left: 5%;
     }
     
     .service__rect {
-     left: 37%;
+         left: 37%;
+    }
 
-   
-}
-
-.service__text {
-    
-    padding-top: 4%;
-}
+    .service__text {
+        padding-top: 4%;
+    }
     .slider2 p {
         margin-bottom: 0;
     }
-/*
-    .social {
-        margin-left: 10%;
-    }
-*/
-    
+
 }
 
 
