--- a/imperiya/styles/slides.css
+++ b/imperiya/styles/slides.css
@@ -83,8 +83,16 @@ html[xmlns] .slides {display: block;}
 
 }
 @media only screen and (min-width: 2500px) {
- .slides .caption_title_line {}
-.slider .flex-direction-nav li a.prev {left: 48%;}
-.slider .flex-direction-nav li a.next {left: 54%;}
+.slider .flex-direction-nav li a.prev {left: 49%;}
+.slider .flex-direction-nav li a.next {left: 53%;}
 
 }
+
+
+@media only screen and (min-width: 2600px) {
+ .slides .caption_title_line {width: 52%;}
+.slider .flex-direction-nav li a.prev {left: 47%;}
+.slider .flex-direction-nav li a.next {left: 51%;}
+
+}
+
