--- a/imperiya/styles/slides.css
+++ b/imperiya/styles/slides.css
@@ -91,8 +91,8 @@ html[xmlns] .slides {display: block;}
 
 @media only screen and (min-width: 2600px) {
  .slides .caption_title_line {width: 52%;}
-.slider .flex-direction-nav li a.prev {left: 47%;}
-.slider .flex-direction-nav li a.next {left: 51%;}
+.slider .flex-direction-nav li a.prev {display: none;}
+.slider .flex-direction-nav li a.next {display: none;}
 
 }
 
