--- a/imperiya/styles/slides2.css
+++ b/imperiya/styles/slides2.css
@@ -80,7 +80,7 @@ html[xmlns] .slides {display: block;}
 @media only screen and (max-width: 767px) {
     .slider2 .flexslider .slides img {max-width: 47%; display: block;height: 300px; background-size: cover; }
     .slider2 .flex-direction-nav li a { width: 30px;height: 30px;}
-    .caption_title_line2{height: 300px;padding:2% 2.5% 0 1%;}
+    .caption_title_line2{height: 300px;padding:7% 2.5% 0 1%;}
     .flex-caption2 { width: 53%;}
     
 }
@@ -93,8 +93,8 @@ html[xmlns] .slides {display: block;}
 }
 @media only screen and (max-width: 460px) {
     .slider2 .flexslider .slides img {max-width: 47%; display: block;height: 200px; background-size: cover; }
-    .slider2 .flex-direction-nav li a { width: 30px;height: 30px;}
-    .caption_title_line2{height: 200px;padding:1% 2.5% 0 1%;}
+    .slider2 .flex-direction-nav li a.next { bottom: 56%;}
+    .caption_title_line2{height: 200px;padding:7% 2.5% 0 2%;}
     .flex-caption2 { width: 53%;}
     
 }
