--- a/imperiya/styles/style.css
+++ b/imperiya/styles/style.css
@@ -1197,6 +1197,7 @@ body {
 @media only screen and (max-width: 767px) {
      .slider2 p {
         width: 97%;
+        line-height: 1.2;
     }
     .slider__btn {
         height: 30px;
@@ -1360,6 +1361,17 @@ body {
         max-width: 50%;
         height: auto;
      }
+    .soc__link {
+        padding-bottom: 5px;
+    }
+
+    .icon-vk {
+         padding-bottom: 6px;
+    }
+    .slider__text__block,
+    .slider2__text__block{
+        border: 1px solid #fce561;
+    }
 
 }
 @media only screen and (max-width: 600px) {
@@ -1427,7 +1439,7 @@ body {
 
 @media only screen and (max-width: 460px) {
     .slider2 p {
-        width: 95%;
+        width: 92%;
         font-size: 14px;
        line-height: 1.1;
     }
@@ -1466,6 +1478,9 @@ body {
 }
 
 @media only screen and (max-width: 400px) {
+    .slider2 p {
+        width: 88%;
+    }
     .service__rect {
          left: 30%;
     }
